# cloudsmith-cs-interview-candidate

./: pyproject.toml
.github/workflows/: build_package.yml  promote_package.yml  realease_package.yml
src/example_package/: example.py
