[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudsmith-cs-interview-candidate"
version = "1.0.0"
authors = [
  { name = "Example Author", email = "author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["cloudsmith_cs_interview_candidate"]
