[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudsmith-cs-interview-candidate"
version = "1.0.0"
authors = [
  { name = "Example Author", email = "author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.dependencies]
requests = "^2.25"  # Example dependency

[tool.hatch.build.targets.wheel]
packages = ["cloudsmith_cs_interview_candidate"]

[project.scripts]
my_script = "cloudsmith_cs_interview_candidate.module:function"  # Example entry point
