[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudsmith-cs-interview-candidate"
version = "1.0.0"
authors = [
    { name = "Example Author", email = "author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Specify your project dependencies here
dependencies = [
    # Uncomment and add any dependencies your project requires
    # "requests>=2.25.0",
    # "numpy>=1.21.0",
]

[tool.hatch.build.targets.wheel]
# Specify the packages to include in the wheel
packages = ["cloudsmith_cs_interview_candidate"]

# Optional: Add entry points if you have command-line scripts
# [project.scripts]
# my_script = "cloudsmith_cs_interview_candidate.module:function"  # Example entry point
